--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "license": "Apache-2.0",
   "bin": {
-    "stitch-cli": "./wrapper.js"
+    "stitch-cli": "./wrapper.js",
+    "transpiler": "./wrapper-transpiler.js"
   },
   "scripts": {
     "install": "node install.js"
