--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -53,6 +53,8 @@ linters-settings:
   #   # report about assignment of errors to blank identifier: `num, _ := strconv.Atoi(numStr)`;
   #   # default is false: such cases aren't reported by default.
     check-blank: true
+
+    exclude: .errcheck
   govet:
     # report about shadowed variables
     check-shadowing: false
