--- a/.evg.yml
+++ b/.evg.yml
@@ -212,14 +212,14 @@ tasks:
             export PATH=$PATH:$ROOT_DIR/realm-cli/etc/transpiler/bin/
             export GOROOT=$ROOT_DIR/go
             export PATH=$GOROOT/bin:$PATH
-            export REALM_NO_SKIP_TEST=1
-            export REALM_MONGODB_CLOUD_GROUP_ID="${baas_mongodb_cloud_group_id}"
-            export REALM_MONGODB_CLOUD_USERNAME="${baas_mongodb_cloud_username}"
-            export REALM_MONGODB_CLOUD_API_KEY="${baas_mongodb_cloud_api_key}"
-            export REALM_MONGODB_CLOUD_ADMIN_USERNAME="${baas_mongodb_cloud_admin_username}"
-            export REALM_MONGODB_CLOUD_ADMIN_API_KEY="${baas_mongodb_cloud_admin_api_key}"
-            export REALM_MONGODB_CLOUD_API_BASE_URL="${atlas_server_url}"
-            export REALM_SERVER_BASE_URL="${realm_server_url}"
+            export BAAS_NO_SKIP_TEST=1
+            export BAAS_MONGODB_CLOUD_GROUP_ID="${baas_mongodb_cloud_group_id}"
+            export BAAS_MONGODB_CLOUD_USERNAME="${baas_mongodb_cloud_username}"
+            export BAAS_MONGODB_CLOUD_API_KEY="${baas_mongodb_cloud_api_key}"
+            export BAAS_MONGODB_CLOUD_ADMIN_USERNAME="${baas_mongodb_cloud_admin_username}"
+            export BAAS_MONGODB_CLOUD_ADMIN_API_KEY="${baas_mongodb_cloud_admin_api_key}"
+            export BAAS_MONGODB_CLOUD_API_BASE_URL="${atlas_server_url}"
+            export BAAS_SERVER_BASE_URL="${realm_server_url}"
             cd $ROOT_DIR/realm-cli
             go test -v -covermode=count -coverprofile=$ROOT_DIR/cover.out $(go list github.com/10gen/realm-cli/internal/cloud/...) -timeout 25m > $ROOT_DIR/realm-cli.suite
       - command: s3.put
@@ -261,8 +261,8 @@ buildvariants:
   expansions:
     atlas_server_url: "https://cloud-dev.mongodb.com"
     baas_supportlib_url: "https://s3.amazonaws.com/stitch-artifacts/stitch-support/stitch-support-rhel-70-4.3.2-721-ge791a2e-patch-5e2a6ad2a4cf473ae2e67b09.tgz"
-    go_url: "https://dl.google.com/go/go1.14.12.linux-amd64.tar.gz"
-    libmongo_url: "https://s3.amazonaws.com//stitch-artifacts/stitch-mongo-libs/stitch_mongo_libs_linux_64_patch_b1c679a26ecb975372de41238ea44e4719b8fbf0_5f3d91c10ae6066889184912_20_08_19_20_57_17/libmongo.so"
+    go_url: "https://dl.google.com/go/go1.14.10.linux-amd64.tar.gz"
+    libmongo_url: "https://s3.amazonaws.com//stitch-artifacts/stitch-mongo-libs/stitch_mongo_libs_linux_64_patch_752d3ad5fa6c559e22ba1215acbe80b5c9567753_5fa1b8110305b929df995244_20_11_03_20_05_38/libmongo.so"
     mongodb_url: "https://fastdl.mongodb.org/linux/mongodb-linux-x86_64-4.0.2.tgz"
     realm_server_url: "http://localhost:8080"
     yarn_url: "https://s3.amazonaws.com/stitch-artifacts/yarn/latest.tar.gz"
