--- a/.evg.yml
+++ b/.evg.yml
@@ -1,5 +1,5 @@
 functions:
-  "fetch_go113":
+  "fetch_go114":
     - command: shell.exec
       params:
         shell: "bash"
@@ -155,7 +155,7 @@ tasks:
   - name: test_unit
     exec_timeout_secs: 3600
     commands:
-      - func: "fetch_go113"
+      - func: "fetch_go114"
       - func: "fetch_yarn"
       - func: "fetch_baas_artifacts"
       - func: "setup_project"
@@ -186,7 +186,7 @@ tasks:
   - name: test_with_cloud
     exec_timeout_secs: 3600
     commands:
-      - func: "fetch_go113"
+      - func: "fetch_go114"
       - func: "fetch_yarn"
       - func: "fetch_baas_artifacts"
       - func: "setup_node"
@@ -229,7 +229,7 @@ tasks:
 
   - name: lint
     commands:
-      - func: "fetch_go113"
+      - func: "fetch_go114"
       - func: "setup_project"
       - command: shell.exec
         params:
@@ -241,6 +241,106 @@ tasks:
             cd $ROOT_DIR/realm-cli
             go run github.com/golangci/golangci-lint/cmd/golangci-lint run ./...
 
+  - name: build_publish_clis
+    depends_on:
+      - name: test_unit
+      - name: lint
+    patchable: false
+    commands:
+      - func: "fetch_go114"
+      - func: "fetch_baas_artifacts"
+      - func: "setup_project"
+      - command: shell.exec
+        params:
+          shell: "bash"
+          script: |
+            set -v
+            set -e
+            export ROOT_DIR=`pwd`
+            export PATH="$ROOT_DIR:$PATH"
+            export GOROOT=$ROOT_DIR/go
+            export PATH=$GOROOT/bin:$PATH
+
+            mkdir -p realm-cli/etc/transpiler/bin
+            cp baas_artifacts/transpiler-* realm-cli/etc/transpiler/bin
+
+            cd $ROOT_DIR/realm-cli
+            export VERSION="${version}"
+            export GOARCH=amd64
+            export SEGMENT_WRITE_KEY="${realm_cli_segment_write_key}"
+
+            export GOOS=linux
+            export OSARCH=linux-amd64
+            echo "Building realm-cli for $GOOS on $GOARCH"
+            REPLACE_VARS="-ldflags \"-X github.com/10gen/realm-cli/internal/cli.Version=$VERSION -X github.com/10gen/realm-cli/internal/cli.osArch=$OSARCH -X github.com/10gen/realm-cli/internal/telemetry.segmentWriteKey=$SEGMENT_WRITE_KEY\""
+            eval go build $REPLACE_VARS -o realm-cli-linux-amd64 main.go
+
+            export GOOS=darwin
+            export OSARCH=macos-amd64
+            REPLACE_VARS="-ldflags \"-X github.com/10gen/realm-cli/internal/cli.Version=$VERSION -X github.com/10gen/realm-cli/internal/cli.osArch=$OSARCH -X github.com/10gen/realm-cli/internal/telemetry.segmentWriteKey=$SEGMENT_WRITE_KEY\""
+            echo "Building realm-cli for $GOOS on $GOARCH"
+            eval go build $REPLACE_VARS -o realm-cli-macos-amd64 main.go
+
+            export GOOS=windows
+            export OSARCH=windows-amd64
+            REPLACE_VARS="-ldflags \"-X github.com/10gen/realm-cli/internal/cli.Version=$VERSION -X github.com/10gen/realm-cli/internal/cli.osArch=$OSARCH -X github.com/10gen/realm-cli/internal/telemetry.segmentWriteKey=$SEGMENT_WRITE_KEY\""
+            echo "Building realm-cli for $GOOS on $GOARCH"
+            eval go build $REPLACE_VARS -o realm-cli-windows-amd64 main.go
+      - command: s3.put
+        params:
+          aws_key: ${artifacts_aws_key}
+          aws_secret: ${artifacts_aws_secret}
+          local_file: realm-cli/realm-cli-linux-amd64
+          remote_file: ${build_id}/linux-amd64/realm-cli
+          bucket: realm-clis
+          content_type: application/octet-stream
+          permissions: public-read
+      - command: s3.put
+        params:
+          aws_key: ${artifacts_aws_key}
+          aws_secret: ${artifacts_aws_secret}
+          local_file: realm-cli/realm-cli-macos-amd64
+          remote_file: ${build_id}/macos-amd64/realm-cli
+          bucket: realm-clis
+          content_type: application/octet-stream
+          permissions: public-read
+      - command: s3.put
+        params:
+          aws_key: ${artifacts_aws_key}
+          aws_secret: ${artifacts_aws_secret}
+          local_file: realm-cli/realm-cli-windows-amd64
+          remote_file: ${build_id}/windows-amd64/realm-cli.exe
+          bucket: realm-clis
+          content_type: application/octet-stream
+          permissions: public-read
+      # transpilers
+      - command: s3.put
+        params:
+          aws_key: ${artifacts_aws_key}
+          aws_secret: ${artifacts_aws_secret}
+          local_file: realm-cli/etc/transpiler/bin/transpiler-linux-x64
+          remote_file: ${build_id}/linux-amd64/transpiler
+          bucket: realm-clis
+          content_type: application/octet-stream
+          permissions: public-read
+      - command: s3.put
+        params:
+          aws_key: ${artifacts_aws_key}
+          aws_secret: ${artifacts_aws_secret}
+          local_file: realm-cli/etc/transpiler/bin/transpiler-macos-x64
+          remote_file: ${build_id}/macos-amd64/transpiler
+          bucket: realm-clis
+          content_type: application/octet-stream
+          permissions: public-read
+      - command: s3.put
+        params:
+          aws_key: ${artifacts_aws_key}
+          aws_secret: ${artifacts_aws_secret}
+          local_file: realm-cli/etc/transpiler/bin/transpiler-win-x64
+          remote_file: ${build_id}/windows-amd64/transpiler.exe
+          bucket: realm-clis
+          content_type: application/octet-stream
+          permissions: public-read
 
 post:
   - command: gotest.parse_files
@@ -261,9 +361,9 @@ buildvariants:
     realm_server_url: "http://localhost:8080"
     yarn_url: "https://s3.amazonaws.com/stitch-artifacts/yarn/latest.tar.gz"
     node_version: 12.16.2
-    transpiler_target: node8-linux
-    version: 0.0.0
+    version: 1.3.2
   tasks:
   - name: test_unit
   - name: test_with_cloud
   - name: lint
+  - name: build_publish_clis
