--- a/.evg.yml
+++ b/.evg.yml
@@ -361,7 +361,7 @@ buildvariants:
     realm_server_url: "http://localhost:8080"
     yarn_url: "https://s3.amazonaws.com/stitch-artifacts/yarn/latest.tar.gz"
     node_version: 12.16.2
-    version: 1.3.2
+    version: 2.0.0-beta
   tasks:
   - name: test_unit
   - name: test_with_cloud
